--- a/LeSpMV/CMakeLists.txt
+++ b/LeSpMV/CMakeLists.txt
@@ -6,7 +6,7 @@ if(NOT CMAKE_CXX_COMPILER)
   set(CMAKE_CXX_COMPILER "g++")
 endif()
 
-set(CMAKE_CXX_FLAGS "-O3")
+set(CMAKE_CXX_FLAGS "-O3 -std=c++17")
 # set(CMAKE_CXX_FLAGS "-g ")
 if(CMAKE_CXX_COMPILER STREQUAL "icx")      # == 如果是intel编译器
   # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopt-zmm-usage=high -xHost")
