--- a/LeSpMV/CMakeLists.txt
+++ b/LeSpMV/CMakeLists.txt
@@ -6,8 +6,8 @@ if(NOT CMAKE_CXX_COMPILER)
   set(CMAKE_CXX_COMPILER "g++")
 endif()
 
-set(CMAKE_CXX_FLAGS "-O3 -std=c++17")
-# set(CMAKE_CXX_FLAGS "-O0 -g -std=c++17")
+# set(CMAKE_CXX_FLAGS "-O3 -std=c++17")
+set(CMAKE_CXX_FLAGS "-O2 -g -std=c++17")
 if(CMAKE_CXX_COMPILER STREQUAL "icx")      # == 如果是intel编译器
   # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -qopt-zmm-usage=high -xHost")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -xHost -mavx512f -Wno-c++17-extensions -qopenmp")
@@ -17,6 +17,8 @@ if(CMAKE_CXX_COMPILER STREQUAL "icx")      # == 如果是intel编译器
 else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -fopenmp")
 endif()
+
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBSR_ANA ")
 
 # Set the project name and version
 project(LeSpMV VERSION 1.0 LANGUAGES CXX)
