--- a/LeSpMV/CMakeLists.txt
+++ b/LeSpMV/CMakeLists.txt
@@ -23,9 +23,12 @@ endif()
 # Set the project name and version
 project(LeSpMV VERSION 1.0 LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Specify the C++ standard
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+# set(CMAKE_CXX_STANDARD 11)
+# set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # make a directory named features for save matrix features
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/features)
